# car-prediction-service

./: README.md  pyproject.toml
app/: main.py  model.py  schemas.py
app/routers/: category.py  price.py
models/: car_price_model.joblib  model_metadata.joblib
training/: data_exploration.ipynb  train_model.py
